tests/agl/rejections/type/record_not_json.agl
record P
  n: int
let j: json = P(n: 1)
j
